CHANGES IN VERSION 1.5.1
------------------------
 o add download_genbank_acc & download_genbank_gi functions <2015-03-05, Thu>
 
CHANGES IN VERSION 1.5.0
------------------------
 o fixed issue of contig has no overlap <2015-02-09, Mon>
 
CHANGES IN VERSION 1.4.8
------------------------
 o update addKeywordFASTA to support user provided keyword mapping <2015-01-26, Mon>
 
CHANGES IN VERSION 1.4.7
------------------------
 o get 454 sequence using pattern of 454\\.fas instead of 454 <2015-01-09, Fri>

CHANGES IN VERSION 1.4.6
------------------------
 o column name NA in summary.csv is not valid and R will read it as NA., fixed it in generateGapFile <2015-01-08, Thu>

CHANGES IN VERSION 1.4.5
------------------------
 o support summary.csv with entry like, 170-1800 <2015-01-07, Wed>

CHANGES IN VERSION 1.4.4
------------------------
 o mixed column in summarize.csv is now consistent with report.html <2015-01-06, Tue>
 o use 454.fas instead of Contig.fna to do alignment <2015-01-05, Mon>
 o generateGapFile now accept summary.csv as input <2015-01-05, Mon>

CHANGES IN VERSION 1.4.3
------------------------
 o run gc() explicitly in autoReport <2014-12-30, Tue>
 o depend ggtree <2014-12-30, Tue>

CHANGES IN VERSION 1.4.2
------------------------
 o update docs <2014-12-17, Wed>
 o add LICENSE file <2014-12-17, Wed>
 o hamming S3 method that support BStringSet and character <2014-12-17, Wed>
 o read.phylip function <2014-12-17, Wed>

CHANGES IN VERSION 1.4.1
------------------------
 o update_skleid now detach skleid before upgrading it and reattach thereafter <2014-12-16, Tue>
 o catch error when windows throw no permission in reading alignment result <2014-12-16, Tue>
 o setNGS_ method for NGS object initial <2014-12-15, Mon>

CHANGES IN VERSION 1.4.0
------------------------
 o NGS class with toNGS constructor and
   getPosition and getSite functions to access
   N-glycosylation site info <2014-12-14, Sun>
 
CHANGES IN VERSION 1.3.3
------------------------