@@ -22,6 +22,7 @@ export(printAlignedSeq)
 export(printConsensus)
 export(printInfo)
 export(printNTcode)
+export(read.genbank)
 export(read.phylip)
 export(readNumFilter)
 export(removeSeq)
