@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.5.1
 ------------------------
+ o add read.genbank function <2015-03-05, Thu>
  o add download_genbank_acc & download_genbank_gi functions <2015-03-05, Thu>
  
 CHANGES IN VERSION 1.5.0
